# FragMind

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/database/: __init__.py  db_manager.py
src/models/: __init__.py
src/services/: __init__.py  llm_service.py
src/ui/: main_window.py  styles.py
